Bug 152115 - Hyperlink Target in document: The last user setting is not remembered
Summary: Hyperlink Target in document: The last user setting is not remembered
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.4.2.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: bibisectRequest, regression
Depends on:
Blocks: Hyperlink-Dialog
  Show dependency treegraph
 
Reported: 2022-11-18 20:53 UTC by R. Green
Modified: 2022-11-26 18:04 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Writer file showing bug in Target in document window (40.46 KB, application/vnd.oasis.opendocument.text)
2022-11-18 20:53 UTC, R. Green
Details

Note You need to log in before you can comment on or make changes to this bug.
Description R. Green 2022-11-18 20:53:33 UTC
Created attachment 183670 [details]
Writer file showing bug in Target in document window

Version: 7.4.2.3 / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded

This a relatively recent and unwelcome regression.

1. Open the attached document.
2. Select a word or phrase.
3. Select "Insert Hyperlink > Document > Target in document.
4. Unfold one or more headings to reveal the subheadings.
5. Close the "Target in document" window, then reopen it

ACTUAL RESULT: The headings have collapsed back so only the top level of headings are visible.

EXPECTED RESULT

The target in document window should ALWAYS remember the previously-set state of headings when reopened

This is a real time-waster of a bug. It means you have to unfold the headings every time you open the dialog. Given that documents may contain scores, even hundreds, of subheadings, you can imagine the extra work involved.
Comment 1 V Stuart Foote 2022-11-18 23:19:28 UTC
Confirmed, Version: 7.4.2.3 (x64) / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL

Following STR of OP the 'Target in document' pop-up (browse button of hldoctp.cxx) opens, using a tree sort order a bit different to SB, tree list collapses when closing and reopening in current launch.

Would be helpful if the expanded tree list would remain, at least while picking the Target in Dialog during the current Hyperlink dialog session--collapsing as it does is annoying while trying to pick the exact target to use.
Comment 2 V Stuart Foote 2022-11-18 23:37:45 UTC
@Jim, think there might be something additional here for Hyperlink in Document, beyond your expanding headings in https://gerrit.libreoffice.org/c/core/+/109930 done for bug 114567

And maybe related, OPs concern of SB Navigator collapse in bug 152116
Comment 3 stragu 2022-11-23 14:31:05 UTC
Repro in:

Version: 7.4.2.3 / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

LO would remember and keep the heading tree unfolded (up to the last selected item) in 7.3:

Version: 7.3.7.2 / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

Therefore, regression.
Comment 4 Jim Raykowski 2022-11-24 09:35:13 UTC
I don't repro with:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5116d6ad85d804e7b7897bc57a4a4bf9d5bed4f1
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

I did notice that gtk3 opens the path of the last selected entry in the tree but doesn't highlight the entry. x11 and qt5 open the path and *do* highlight the entry as expected. It looks to be that way at least back to the beginning of 7.0 where I stopped checking. Proposed fix for this gtk3 misbehavior is here:
https://gerrit.libreoffice.org/c/core/+/143207
Comment 5 stragu 2022-11-24 14:51:28 UTC
Yes, interesting, it looks like the remembering of the the unfolding is fixed in master:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c130063895c7a733ad121db1bf5fbceac38f6ad5
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

And in:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

I think we can close this as WorksForMe.
Jim, do you think your fix for bug 151387 might have been what fixed it?
Comment 6 V Stuart Foote 2022-11-24 19:04:36 UTC
Think we still have an issue picking target in document during launch of the Hyperlink dialog, at least on Windows builds (emphasis with *):

<quote>
...tree list collapses when closing and reopening *in current launch*.

Would be helpful if the expanded tree list would remain, at least while picking the Target in Dialog during the *current Hyperlink dialog session*--collapsing as it does is annoying while trying to pick the exact target to use.
</quote>

A selection from the tree view is retained (and is highlighted on Windwos), but the rest of the tree view has collapsed.  Think leaving it expanded is what the ask is.

=-testing-=

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 651658d37bcb3f493942dd5d0b9a0d65c96f105c
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 7 Jim Raykowski 2022-11-25 00:32:16 UTC
(In reply to Stéphane Guillou (stragu) from comment #5)
> Jim, do you think your fix for bug 151387 might have been what fixed it?
Yes I think so.
Comment 8 Jim Raykowski 2022-11-25 02:14:05 UTC
(In reply to V Stuart Foote from comment #6)
> A selection from the tree view is retained (and is highlighted on Windwos),
> but the rest of the tree view has collapsed.  Think leaving it expanded is
> what the ask is.
Behavior has always been to only restore the last tree view selection when possible. Introduced by commit d7d7b51c23a921803929f716a6554d869b1150a3.
Comment 9 Jim Raykowski 2022-11-25 02:25:23 UTC
Can anyone confirm the gtk3 only misbehavior mentioned in Comment 4 of the last tree entry not being selected (highlighted) when the Target in document dialog is reopened?
Comment 10 stragu 2022-11-25 08:32:13 UTC
(In reply to Jim Raykowski from comment #9)
> Can anyone confirm the gtk3 only misbehavior mentioned in Comment 4 of the
> last tree entry not being selected (highlighted) when the Target in document
> dialog is reopened?

Yes, selection is lost when reopening with GTK3:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 24d7431876e87eba700a9f141dc8e030143a92ad
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Selection restored when reopening with gen/X11:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 24d7431876e87eba700a9f141dc8e030143a92ad
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

as well as KF5:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

as well as QT5:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: qt5 (qfont+xcb)
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 11 Commit Notification 2022-11-26 06:15:37 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ff1c7080086191a5a7670d20b59936fcb79a91dc

tdf#152115 related: Make selected entry stay selected (gtk3 only)

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Jim Raykowski 2022-11-26 06:19:16 UTC
(In reply to Stéphane Guillou (stragu) from comment #10)
> (In reply to Jim Raykowski from comment #9)
> > Can anyone confirm the gtk3 only misbehavior mentioned in Comment 4 of the
> > last tree entry not being selected (highlighted) when the Target in document
> > dialog is reopened?
> 
> Yes, selection is lost when reopening with GTK3:
Thanks for confirming. Should be fixed with the above patch.
Comment 13 stragu 2022-11-26 18:03:51 UTC
Thanks Jim! Verified as fixed in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6bf5dd8faea420aa0dbc7c429952c9868bcadb9e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded