tdf#152115 related: Make selected entry stay selected (gtk3 only)

For unknown reason the selected entry loses selection here only for
gtk3. Swapping the order of the select and scroll_to_row functions
makes the selection remain selected for gtk3. This patch replaces the
select and scroll_to_row functions with the set_cursor function which
makes the focused entry selected and shown in the visible range as
expected for gtk3 as well as x11 and qt5.

Change-Id: If003afa73851573e61704cc847d7152db90a0d14
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143207
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>